# integral-superposition

./: LICENSE  README.md  mechanistic_interpretability_v3.ipynb  pyproject.toml
examples/: 01_dump_activations.py  02_train_sae.py  03_analyze_latents.py  04_merge_and_refit.py  05_plot_maps.py  06_steer_generation.py
integral_superposition/: __init__.py  config.py  types.py
integral_superposition/analysis/: __init__.py  enrichment.py  jaccard_sparse.py  reducer.py  stats.py  top_tokens.py
integral_superposition/backends/: __init__.py  base_model.py  hf_causal_lm.py  io_store.py
integral_superposition/data/: __init__.py  datasets.py  tokenize.py
integral_superposition/dump/: __init__.py  activations.py
integral_superposition/merge/: __init__.py  cluster.py  medoid.py  refit.py
integral_superposition/sae/: __init__.py  load.py  model.py  train.py
integral_superposition/steering/: __init__.py  hooks.py
integral_superposition/viz/: __init__.py  maps.py  panels.py
